# unsupervised-learning

./: 01 - Fundamentals.ipynb  02 - K-Means.ipynb  03 - Hierarchical.ipynb  04 - DBSCAN.ipynb  05 - Clustering Metrics.ipynb  10 - Autoencoders.ipynb  11 - Embeddings.ipynb  12 - Embeddings Analysis.html  12 - Embeddings Analysis.ipynb  pyproject.toml
