[project]
name = "unsupervised-learning"
version = "0.1.0"
description = "Learning machine learning."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dtaidistance>=2.4.0",
    "ipympl>=0.10.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "umap-learn>=0.5.12",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "ipykernel>=7.2.0",
    "ruff>=0.15.10",
    "uv>=0.11.6",
]
